--- a/butazzo-noImages/index.html
+++ b/butazzo-noImages/index.html
@@ -33,7 +33,7 @@
                             <div class="fadeUp">
                                 <div class="d-flex flex-column align-items-center position-relative item_media pr-9">
                                     <div class="position-relative">
-                                        <img src="src/assets/img/Butazzo-Slider1.png" alt="butazzo-slider" class="item_img animate-bounce">
+                                        <img src="https://placehold.co/480x260" alt="butazzo-slider" class="item_img animate-bounce">
                                         <div class="item_badge">
                                             <span class="badge_btext">20%</span>
                                             <span class="badge_stext">OFF</span>
@@ -74,7 +74,7 @@
                             <div class="fadeUp">
                                 <div class="d-flex flex-column align-items-center position-relative item_media pr-9">
                                     <div class="position-relative">
-                                        <img src="src/assets/img/Butazzo-Slider2.png" alt="butazzo-slider" class="item_img animate-bounce">
+                                        <img src="https://placehold.co/480x260" alt="butazzo-slider" class="item_img animate-bounce">
                                         <div class="item_badge">
                                             <span class="badge_btext">20%</span>
                                             <span class="badge_stext">OFF</span>
@@ -115,7 +115,7 @@
                             <div class="fadeUp">
                                 <div class="d-flex flex-column align-items-center position-relative item_media pr-9">
                                     <div class="position-relative">
-                                        <img src="src/assets/img/Butazzo-Slider3.png" alt="butazzo-slider" class="item_img animate-bounce">
+                                        <img src="https://placehold.co/480x260" alt="butazzo-slider" class="item_img animate-bounce">
                                         <div class="item_badge">
                                             <span class="badge_btext">20%</span>
                                             <span class="badge_stext">OFF</span>
