--- a/butazzo-noImages/documentation/index.html
+++ b/butazzo-noImages/documentation/index.html
@@ -262,10 +262,14 @@
             </li>
             <li>
               <span class="d-block"><strong>Fonts</strong></span>
-              <a href="https://fonts.google.com/specimen/Nunito" rel="nofollow" target="_blank">Montserrat</a>
+              <a href="https://fonts.google.com/specimen/Montserrat" rel="nofollow" target="_blank">Montserrat</a>
             </li>
             <li>
               <a href="https://www.dafont.com/chunkfive-ex.font" rel="nofollow" target="_blank">ChunkFiveEx</a>
+            </li>
+            <li>
+              <span class="d-block"><strong>Icon</strong></span>
+              <a href="https://www.flaticon.com/" rel="nofollow" target="_blank">Flaticon</a>
             </li>
             <li>
               <span class="d-block"><strong>Images</strong></span>
