--- a/butazzo-noImages/documentation/index.html
+++ b/butazzo-noImages/documentation/index.html
@@ -81,13 +81,13 @@
           <div class="row">
             <div class="large-centered columns">
               <div class="name">
-                <h3>Butazzo - Fast Food and Restaurant Responsive Bootstrap Slider Template <span>v1.0</span></h3>
+                <h3>Butazzo - Fast Food and Restaurant Responsive Bootstrap Slider Template <span>v1.0.1</span></h3>
                 <p>Premium HTML Slider Template Documentation</p>
               </div>
 
               <ul class="meta">
                 <li><strong>Name:</strong> Butazzo</li>
-                <li><strong>Version:</strong> v1.0.0</li>
+                <li><strong>Version:</strong> v1.0.1</li>
                 <li>
                   <strong>Author: </strong> 
                   <a 
@@ -352,7 +352,13 @@
             awesome features, updates generally come at least twice a month.
           <p>
 
-          <pre class="css">
+<pre class="css">
+  V. 1.0.1 – 06.03.2024
+  - Added: Extra animation effects
+  - Tweak: Improved Documentation
+</pre>
+
+<pre class="css">
 
   V. 1.0.0 – 29.02.2024
   - Initial release
