--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
                         <div class="col-md-6 col-lg-5">
 
                             <!-- Carousel Content -->
-                            <div class="fadeUp fade-slow text-start d-none d-md-block">
-                                <h4 class="item_name">Delicious Food</h4>
-                                <p class="item_info">
+                            <div class="text-start d-none d-md-block">
+                                <h4 class="item_name fadeUp">Cheesy Crust Pizza</h4>
+                                <p class="item_info fadeUp fade-slow">
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                                 </p>
-                                <div class="text-end">
+                                <div class="text-end fadeUp fade-medium">
                                     <a href="#" class="item_link page-scroll">
                                         Make Reservation
                                     </a>
@@ -76,7 +76,7 @@
                                     <div class="position-relative">
                                         <img src="src/assets/img/Butazzo-Slider2.png" alt="butazzo-slider" class="item_img animate-bounce">
                                         <div class="item_badge">
-                                            <span class="badge_btext">20%</span>
+                                            <span class="badge_btext">25%</span>
                                             <span class="badge_stext">OFF</span>
                                         </div>
                                     </div>
@@ -87,12 +87,12 @@
                         <div class="col-md-6 col-lg-5">
 
                             <!-- Carousel Content -->
-                            <div class="fadeUp fade-slow text-start d-none d-md-block">
-                                <h4 class="item_name">Delicious Food</h4>
-                                <p class="item_info">
+                            <div class="text-start d-none d-md-block">
+                                <h4 class="item_name fadeUp">Taco Bell Chicken</h4>
+                                <p class="item_info fadeUp fade-slow">
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                                 </p>
-                                <div class="text-end">
+                                <div class="text-end fadeUp fade-medium">
                                     <a href="#" class="item_link page-scroll">
                                         Make Reservation
                                     </a>
@@ -117,7 +117,7 @@
                                     <div class="position-relative">
                                         <img src="src/assets/img/Butazzo-Slider3.png" alt="butazzo-slider" class="item_img animate-bounce">
                                         <div class="item_badge">
-                                            <span class="badge_btext">20%</span>
+                                            <span class="badge_btext">15%</span>
                                             <span class="badge_stext">OFF</span>
                                         </div>
                                     </div>
@@ -128,12 +128,12 @@
                         <div class="col-md-6 col-lg-5">
 
                             <!-- Carousel Content -->
-                            <div class="fadeUp fade-slow text-start d-none d-md-block">
-                                <h4 class="item_name">Delicious Food</h4>
-                                <p class="item_info">
+                            <div class="text-start d-none d-md-block">
+                                <h4 class="item_name fadeUp">Turkey Burger</h4>
+                                <p class="item_info fadeUp fade-slow">
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                                 </p>
-                                <div class="text-end">
+                                <div class="text-end fadeUp fade-medium">
                                     <a href="#" class="item_link page-scroll">
                                         Make Reservation
                                     </a>
